kust/kust/cluster/chaska-storage/elastic/stage1/monitoring-elastic.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eckmon
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: eckmon
  labels:
    app: kibana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  rules:
    - host: eckmon.fcaus-f-storage.autodata.tech
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: eckmon-kb-http
                port:
                  number: 5601
  tls:
    - secretName: fcaus-wildcard
      hosts:
        - eckmon.fcaus-f-storage.autodata.tech
